// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="ContactListItem__user--avatar"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
              <span
                class="font-semibold"
                data-testid="ContactListItem__name"
              >
                Brian
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ cjfLjy"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple addresses 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="ContactListItem__user--avatar"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
              <span
                class="font-semibold"
                data-testid="ContactListItem__name"
              >
                Brian
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ cjfLjy"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          />
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="ContactListItem__user--avatar"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
              <span
                class="font-semibold"
                data-testid="ContactListItem__name"
              >
                Brian
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ cjfLjy"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          />
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with one option 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="ContactListItem__user--avatar"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
              <span
                class="font-semibold"
                data-testid="ContactListItem__name"
              >
                Brian
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          >
            <button
              class="sc-AxirZ dXpJau float-right"
              color="primary"
              data-testid="ContactListItem__one-option-button-0"
              type="button"
            >
              Option 1
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="sc-Axmtr laKhNM group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI hFrGzt"
          />
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD justify-center"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-AxiKw dAMydl border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxhCb VoPpj"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="sc-AxheI heJeLD"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D61mfS…J3Dyib
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI heJeLD space-x-2 text-sm font-bold text-center "
          >
            <div
              class="sc-AxiKw bZmbqI border-black"
            >
              <div
                class="sc-AxhCb gZVKaf"
                height="25"
                width="25"
              >
                <svg>
                  delegate.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI gQoesF justify-end "
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
